--- a/tictactoe.html
+++ b/tictactoe.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <span></span><span></span><span></span> <br>
+      <span></span><span>O</span><span></span> <br>
       <span></span><span></span><span></span> <br>
       <span>X</span><span></span><span></span> <br>
     </div>
