made my second move

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <div>
-      <span></span><span>O</span><span></span> <br>
-      <span></span><span></span><span></span> <br>
-      <span>X</span><span></span><span></span> <br>
+      <div><span></span><span>O</span><span>X</span></div> <br>
+      <div><span></span><span></span><span></span></div> <br>
+      <div><span>X</span><span></span><span></span></div> <br>
     </div>
   </body>
 </html>
