made my second move

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <div><span></span><span>O</span><span>X</span></div> <br>
+      <div><span>X</span><span>O</span><span></span></div> <br>
       <div><span></span><span></span><span></span></div> <br>
       <div><span>X</span><span></span><span></span></div> <br>
     </div>
