--- a/tictactoe.html
+++ b/tictactoe.html
@@ -8,7 +8,7 @@
   <body>
     <div>
       <div><span>X</span><span>O</span><span></span></div> <br>
-      <div><span>O</span><span></span><span></span></div> <br>
+      <div><span>O</span><span>O</span><span></span></div> <br>
       <div><span>X</span><span></span><span>X</span></div> <br>
     </div>
   </body>
